src/test/deca/context/invalid/IfThenElseEmpty.deca
{
    boolean a =true;
    if (){
        print("it's rather Empty);
    }else{
        print("Normalement ici");
    }
}